syntax = "proto3";

package core.project;
option go_package = "github.com/ca-risken/core/proto/project";

/*
 * Entity
 */

// Project
message Project {
  uint32 project_id = 1;
  string name = 2;
  repeated ProjectTag tag = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

// ProjectTag
message ProjectTag {
  uint32 project_id = 1;
  string tag = 2;
  string color = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}